--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "vite-plugin-eslint": "^1.8.1"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
+    "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
+    "jquery": "^3.7.1",
+    "lodash.debounce": "^4.0.8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.1.3"
   }
 }
