--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "zustand": "^5.0.3"
   }
 }
