--- a/package.json
+++ b/package.json
@@ -32,13 +32,18 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "@xyflow/react": "^12.5.5",
     "axios": "^1.7.9",
     "immer": "^10.1.1",
     "jquery": "^3.7.1",
     "lodash.debounce": "^4.0.8",
+    "mongoose": "^8.13.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.3",
+    "react-select": "^5.10.1",
+    "reactflow": "^11.11.4",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   }
 }
